# AnBProtocol

./: .gitignore  LOG-gpt-4.1-gpt5.1.txt  LOG-k2-think_gpt5.1.txt  LOG-k2-think_gpt5.1_parsed.txt  README.md  pyproject.toml  requirements.txt
dataset/: Notation_guidlines.md  references.txt
dataset/anb/: 1.anb  10.anb  11.anb  12.anb  1tls.AnB  2.anb  2nspk.AnB  3ISOsymKeyOnePassUnilateralAuthProt.AnB  4.anb  5.anb  8.anb  9.anb  Amended-NSCK.AnB  AndrewSecureRPCSecrecy_fix.AnB  Basic-Kerberos_fix.AnB  Bilateral-Key_Exchange.AnB  Denning-Sacco.AnB  Denning-Sacco_public.AnB  ETMA.anb  ISOCCFOnePassUnilateralAuthProt.AnB  ISOCCFThreePassMutual.AnB  ISOCCFTwoPassMutualAuthProt-Corr.AnB  ISOCCFTwoPassUnilateralAuthProt.AnB  ISOpubKeyOnePassUnilateralAuthProt.AnB  ISOpubKeyTwoPassMutualAuthProt-CORR.AnB  ISOpubKeyTwoPassUnilateralAuthProt.AnB  ISOsymKeyThreePassMutual.AnB  ISOsymKeyTwoPassMutualAuthProt.AnB  ISOsymKeyTwoPassUnilateralAuthProt.AnB  NSCK.AnB  NonReversible.AnB  PKINIT.AnB  Yahalom.anb  asw.anb  asym.anb  cr.anb  dh.anb  nsl-ks.AnB  nspk.anb  nssk.anb  (+2 more)
dataset/avispa-library/: 2pRSA.anb  8021x_Radius.anb  AAAMobileIP.anb  ASW.anb  CHAPv2.anb  CRAM-MD5.anb  CTP-non_predictive-fix.anb  DHCP-delayed-auth.anb  DNSSEC.anb  EAP_AKA.anb  EAP_Archie.anb  EAP_IKEv2.anb  EAP_SIM.anb  EAP_TLS.anb  EAP_TTLS_CHAP.anb  EC-AKA.anb  EKE.anb  EKE2.anb  FairZG.anb  IKEv2-CHILD.anb  IKEv2-DS.anb  IKEv2-DSx.anb  IKEv2-EAP-Archie.anb  IKEv2-MAC.anb  IKEv2-MACx.anb  ISO1.anb  ISO2.anb  ISO3.anb  ISO4.anb  Kerb-Cross-Realm.anb  (+46 more)
examples/: tls_like.txt  toy.txt
src/: .env.backup
(+778 files in other folders)
